# Amazon-Dissatisfaction-Prediction

./: .gitignore  Preprocessing.py  README.md  gnn.py  goodness.json  graph.py  helpfulness.json  manual-labeling.py  pyproject.toml  train.py  train_SaveGraphResults.py
Baselines/: CLIP.ipynb  CLIP_Baseline.pth  README.md  clip2.py  model_state_dict.pth  y_tensor.pt
Images/: README.md
conf/: main.yaml
